<?xml version="1.0"?>
<package>
  <name>ros_fuse_point_cloud</name>
  <version>0.0.0</version>
  <description>fuse several point clouds</description>

  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jeremiederay@todo.todo">jeremiederay</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/ros_fuse_point_cloud</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author >Jeremie Deray</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ros_img_sync</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>ros_img_sync</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
